<resources>
    <string name="app_name">Finces Merchant</string>
    <string name="permissions">Permissions</string>
    <string name="camera_permission_denied">Camera Permission Denied</string>
    <string name="storage_permission">Storage permission</string>
    <string name="camera_permission">Camera permission</string>
    <string name="user_info_permission">User info permission</string>
    <string name="storage">Storage</string>
    <string name="welcome_message">Your Business grow \nwith us</string>
    <string name="select_language">Select language</string>
    <string name="get_start_storage_permission">Need storage permission to access application feature\'s and  download financial documents from in this app</string>
    <string name="camera">Camera</string>
    <string name="get_start_camera_permission">Purpose for app user use the camera feature for update profile picture and cover picture.</string>
    <string name="user_information">User information</string>
    <string name="get_start_user_info_permission">We collect your personal data such as mobile no, country , region, gender, age, our application searching history for providing better use.</string>
    <string name="continue_">Continue</string>
    <string name="choose_language">Choose Language</string>
    <string name="english">English</string>
    <string name="tamil">Tamil</string>
    <string name="hindi">Hindi</string>
    <string name="log_in">LOG IN</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="loading_privacy_policy">Loading privacy policy</string>
    <string name="agree">Agree</string>
    <string name="app_permission_title">We need a \nfew permissions!</string>
    <string name="sms_txt">SMS</string>
    <string name="phone_number">Phone number</string>
    <string name="bfsi">BFSI</string>
    <string name="meaning">Meaning</string>
    <string name="sole_proprietorship_as_defined_by_the_govt_of_india_is_a_one_man_organization_where_a_single_individual_owns_manages_and_controls_the_business_there_is_no_legal_distinction_between_the_owner_and_the_business_entity_the_sole_proprietor_is_not_a_legal_entity_it_simply_refers_to_a_person_who_owns_the_business">Sole Proprietorship, as defined by the Govt. Of India, is a “one-man organization where a single individual owns, manages and controls the business”. There is no legal distinction between the owner and the business entity. The sole proprietor is not a legal entity. It simply refers to a person who owns the business.</string>
    <string name="business_incorporation">Business Incorporation</string>
    <string name="the_sole_proprietorship_is_a_popular_business_form_due_to_its_simplicity_ease_of_setup_and_nominal_cost_a_sole_proprietor_is_not_required_to_go_through_elaborate_legal_formalities_no_agreement_is_to_be_made_and_registration_of_the_firm_is_also_not_essential_however_the_owner_may_be_required_to_obtain_a_license_specific_to_the_line_of_business_from_the_local_administration">The Sole Proprietorship is a popular business form due to its simplicity, ease of setup, and nominal cost. A sole proprietor is not required to go through elaborate legal formalities. No agreement is to be made and registration of the firm is also not essential. However, the owner may be required to obtain a license specific to the line of business from the local administration.</string>
    <string name="government_registrations">Government Registrations</string>
    <string name="a_sole_proprietorship_business_like_any_other_form_of_business_has_to_necessarily_register_on_various_government_departments_and_programs_and_follow_all_the_rules_and_regulations_regulations_amended_by_the_law_on_timely_basis_as_and_when_they_become_eligible_or_meet_the_criteria_of_such_laws_further_registration_on_such_government_programs_enables_the_proprietor_to_avail_various_benefits_and_subsidies_provided_by_government_under_such_laws_n_n_some_of_the_major_laws_or_programs_that_every_entrepreneur_should_be_aware_of_are">A Sole Proprietorship business like any other form of business has to necessarily register on various government departments and programs and follow all the rules and regulations regulations amended by the law on timely basis as and when they become eligible or meet the criteria of such laws. Further registration on such government programs enables the proprietor to avail various benefits and subsidies provided by government under such laws. \n \n Some of the Major Laws or Programs that every entrepreneur should be aware of are:</string>
    <string name="_1_income_tax_laws">1, Income Tax Laws</string>
    <string name="_2_goods_and_service_tax">2, Goods and Service Tax</string>
    <string name="_3_shop_amp_1_establishment_laws"><![CDATA[3, Shop & Establishment Laws]]></string>
    <string name="_4_professional_tax_under_municipal_laws">4, Professional Tax under Municipal Laws</string>
    <string name="_5_legal_metrology_laws">5, Legal Metrology Laws</string>
    <string name="_6_legal_metrology_laws">6, Legal Metrology Laws</string>
    <string name="_7_1_ssi_msme_laws_amp_schemes"><![CDATA[7, SSI/MSME Laws & Schemes]]></string>
    <string name="legal_amp_trade_business_name"><![CDATA[Legal & Trade/Business Name]]></string>
    <string name="the_legal_name_of_any_sole_proprietorship_business_is_the_name_of_its_owner_as_given_in_the_pan_database_sole_proprietors_can_do_business_under_their_own_names_because_creating_a_separate_business_or_trade_name_isn_t_necessary_a_sole_proprietor_may_however_use_a_trade_name_or_business_name_other_than_their_or_its_legal_name_they_may_have_to_legally_trademark_their_business_name_if_it_differs_from_their_own_legal_name_if_required">The Legal Name of any Sole Proprietorship Business is the name of its owner as given in the PAN Database. Sole proprietors can do business under their own names because creating a separate business or trade name isn’t necessary. A sole proprietor may however use a trade name or business name other than their or its legal name. They may have to legally trademark their business name if it differs from their own legal name if required.</string>
    <string name="investment_amp_capital"><![CDATA[Investment & Capital]]></string>
    <string name="there_are_no_minimum_capital_investment_requirements_for_a_sole_proprietorship_as_sole_proprietorships_are_not_considered_business_entities_that_are_separate_from_its_owner_the_funds_received_from_lenders_or_investors_are_treated_as_personal_use_requests_although_the_funds_acquired_from_these_sources_are_used_for_business_purposes">There are no minimum capital investment requirements for a sole proprietorship. As sole proprietorships are not considered business entities that are separate from its owner the funds received from lenders or Investors are treated as personal use requests, although the funds acquired from these sources are used for business purposes.</string>
    <string name="taxation">Taxation</string>
    <string name="because_a_sole_proprietorship_is_indistinguishable_from_its_owner_sole_proprietorship_taxation_is_quite_simple_the_income_earned_by_a_sole_proprietorship_is_income_earned_by_its_owner">Because a sole proprietorship is indistinguishable from its owner, sole proprietorship taxation is quite simple. The income earned by a sole proprietorship is income earned by its owner.</string>
    <string name="work_conditions">Work Conditions</string>
    <string name="a_sole_trader_does_not_necessarily_work_alone_it_is_possible_for_the_sole_trader_to_employ_other_people">A sole trader does not necessarily work \'alone\'—it is possible for the sole trader to employ other people</string>
    <string name="community">Community</string>
    <string name="there_are_various_communities_and_association_of_people_in_this_sector_who_have_come_together_to_address_various_challenges_faced_by_them_and_boost_their_contribution_to_the_society_and_economy_of_the_nation_n_n_sole_proprietorship_as_defined_by_the_govt_of_india_is_a_one_man_organisation_where_a_single_individual_owns_manages_and_controls_the_business_there_is_no_legal_distinction_between_the_owner_and_the_business_entity_the_sole_proprietor_is_not_a_legal_entity_it_simply_refers_to_a_person_who_owns_the_business">There are various communities and association of people in this sector, who have come together to address various challenges faced by them and boost their contribution to the society and economy of the nation. \n \n Sole Proprietorship, as defined by the Govt. Of India, is a “one-man organisation where a single individual owns, manages and controls the business”. There is no legal distinction between the owner and the business entity. The sole proprietor is not a legal entity. It simply refers to a person who owns the business.</string>
    <string name="this_app_is_a_simple_yet_powerful_tool_for_individual_entrepreneurs_or_sole_proprietors_or_sole_traders_who_are_willing_or_already_pursuing_their_business_as_an_individual_in_the_bfsi_industry_to_accelerate_automate_and_manage_their_business_more_efficiently_and_effectively">This App is a simple yet powerful tool for Individual Entrepreneurs or Sole Proprietors or Sole Traders who are willing or already pursuing their business as an Individual in the BFSI Industry to accelerate, automate and manage their business more efficiently and effectively.</string>
    <string name="here_we_guide_you_from_set_up_to_taxation_helping_you_with_the_various_rules_and_regulations_applicable_to_your_business_necessary_registrations_and_licenses_to_be_obtained_managing_and_automating_your_entire_business_processes_like_invoicing_banking_collection_reporting_inventory_management_accounting_and_taxation_along_with_customer_relationship_management_thus_transforming_your_active_income_to_passive_income">Here, we guide you from set-up to taxation, helping you with the various rules and regulations applicable to your business , necessary registrations and licenses to be obtained, managing and automating your entire business processes like invoicing, banking, collection, reporting, inventory management, accounting and taxation, along with customer relationship management thus transforming your active income to passive income.</string>
    <string name="we_also_strive_to_provide_a_platform_for_the_various_business_communities_to_engage_with_each_other_in_a_better_and_constructive_way">We also strive to provide a platform for the various business communities to engage with each other in a better and constructive way.</string>
    <string name="our_mission">Our Mission</string>
    <string name="to_unleash_the_power_of_technology_into_the_hands_of_entrepreneurs">To unleash the power of technology into the hands of entrepreneurs.</string>
    <string name="engineering_or_technology_is_all_about_using_the_power_of_science_to_make_life_better_for_people_to_reduce_cost_to_improve_comfort_to_improve_productivity_etc">Engineering or technology is all about using the power of science to make life better for people, to reduce cost, to improve comfort, to improve productivity, etc.</string>
    <string name="n_r_narayana_murthy">--- N. R. Narayana Murthy</string>
    <string name="wishing_you_a_happy_ride_with_us_we_look_forward_to_a_constructive_and_mutually_beneficial_relationship">Wishing you a happy ride with us, we look forward to a constructive and mutually beneficial relationship.</string>
    <string name="send_otp">Send OTP</string>
    <string name="please_enter_your_phone_number_to_verify_a_6_digit_otp_will_be_sent_to_you">Please enter your phone number to verify. A 6-digit OTP will be sent to you.</string>
</resources>