<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:padding="20dp"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/white">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_phone_verification_1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:textSize="15sp"
            android:textStyle="bold"
            android:text="@string/please_enter_your_phone_number_to_verify_a_6_digit_otp_will_be_sent_to_you"/>

        <EditText
            android:id="@+id/etPhone"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:layout_marginTop="10dp"
            android:maxLength="10"
            android:background="@drawable/btn_common"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingStart="10dp"/>

        <Button
            android:id="@+id/btnSendPhone"
            android:text="@string/send_otp"
            android:layout_marginTop="10dp"
            android:layout_gravity="end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</RelativeLayout>
